--- a/OdeToFood/OdeToFood.Main/appsettings.json
+++ b/OdeToFood/OdeToFood.Main/appsettings.json
@@ -7,5 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "Message": "Hello from appsettings.json"
+  "Message": "Hello from appsettings.json",
+  "ConnectionStrings": {
+    "OdeToFoodDb": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=OdeToFood;Integrated Security=True;"
+  }
 }
